<resources>
    <string name="app_name">住まいと住所</string>
    <string name="tv_title">必要な情報を入力してください</string>
    <string name="tv_name">お名前</string>
    <string name="tv_jyusho">住まい</string>
    <string name="bt_click">表示</string>
    <string name="bt_clear">住まいクリア</string>
    <string name="bt_clear2">名前クリア</string>
    <string name="bt_confirm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_clear3">すべてクリア</string>
</resources>